parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> START programa1 programa2 main END
Rule 2     programa1 -> var_declaracion programa1
Rule 3     programa1 -> epsilon
Rule 4     programa2 -> funcion programa2
Rule 5     programa2 -> epsilon
Rule 6     var_declaracion -> tipo var_declaracion1
Rule 7     var_declaracion -> VECTOR tipo var_declaracion2
Rule 8     var_declaracion1 -> ID declareVar
Rule 9     var_declaracion2 -> ID declareVar2
Rule 10    var_declaracion3 -> epsilon
Rule 11    var_declaracion3 -> inicializacion
Rule 12    var_declaracion4 -> epsilon
Rule 13    var_declaracion4 -> inicializacion_vector
Rule 14    declareVar -> <empty>
Rule 15    declareVar2 -> <empty>
Rule 16    parametros -> tipo parametros1 ID parametros2
Rule 17    parametros -> VECTOR tipo parametros1 ID parametros2
Rule 18    parametros1 -> AMPERSON
Rule 19    parametros1 -> epsilon
Rule 20    parametros2 -> COMMA parametros
Rule 21    parametros2 -> epsilon
Rule 22    inicializacion -> EQUALS exp
Rule 23    tipo -> INT
Rule 24    tipo -> FLOAT
Rule 25    tipo -> BOOL
Rule 26    tipo -> STRING
Rule 27    bloque -> LCURL estatuto bloque1 RCURL
Rule 28    bloque1 -> estatuto bloque1
Rule 29    bloque1 -> epsilon
Rule 30    exp -> termino checkEXPPOper exp1
Rule 31    checkEXPPOper -> <empty>
Rule 32    exp1 -> PLUS addOperator exp
Rule 33    exp1 -> MINUS addOperator exp
Rule 34    exp1 -> epsilon
Rule 35    termino -> factor checkTERMPOper termino1
Rule 36    checkTERMPOper -> <empty>
Rule 37    termino1 -> TIMES addOperator termino
Rule 38    termino1 -> DIVIDE addOperator termino
Rule 39    termino1 -> epsilon
Rule 40    addOperator -> <empty>
Rule 41    inicializacion_vector -> EQUALS LBRACKET inicializacion_vector1 RBRACKET
Rule 42    inicializacion_vector1 -> varcte inicializacion_vector2
Rule 43    inicializacion_vector1 -> epsilon
Rule 44    inicializacion_vector2 -> COMMA varcte inicializacion_vector2
Rule 45    inicializacion_vector2 -> epsilon
Rule 46    main -> MAIN declareMain LCURL main1 estatuto main2 RCURL
Rule 47    declareMain -> <empty>
Rule 48    main1 -> var_declaracion main1
Rule 49    main1 -> epsilon
Rule 50    main2 -> estatuto main2
Rule 51    main2 -> epsilon
Rule 52    while -> WHILE LPAREN expresion RPAREN bloque
Rule 53    factor -> LPAREN factorAddFakeCover exp RPAREN
Rule 54    factor -> factor1
Rule 55    factorAddFakeCover -> <empty>
Rule 56    factor1 -> PLUS varcte
Rule 57    factor1 -> MINUS varcte
Rule 58    factor1 -> varcte
Rule 59    estatuto -> asignacion
Rule 60    estatuto -> llamada
Rule 61    estatuto -> condicion
Rule 62    estatuto -> switch
Rule 63    estatuto -> while
Rule 64    estatuto -> for
Rule 65    asignacion -> ID EQUALS asignacion1
Rule 66    asignacion1 -> exp
Rule 67    asignacion1 -> llamada
Rule 68    asignacion1 -> asignacion_vector
Rule 69    asignacion_vector -> LBRACKET inicializacion_vector1 RBRACKET
Rule 70    expresion -> expresion1
Rule 71    expresion1 -> epsilon
Rule 72    expresion1 -> expresion2 exp
Rule 73    expresion2 -> LESS
Rule 74    expresion2 -> GREATER
Rule 75    expresion2 -> DOUBLE_EQUAL
Rule 76    expresion2 -> DIFF
Rule 77    expresion_logica -> exp expresion_logica1 expresion
Rule 78    expresion_logica1 -> AND exp
Rule 79    expresion_logica1 -> epsilon
Rule 80    expresion_logica1 -> OR exp
Rule 81    llamada -> ID LPAREN llamada1 RPAREN
Rule 82    llamada -> print
Rule 83    llamada -> input
Rule 84    llamada1 -> epsilon
Rule 85    llamada1 -> exp llamada2
Rule 86    llamada2 -> epsilon
Rule 87    llamada2 -> COMMA exp llamada2
Rule 88    varcte -> ID varcte1
Rule 89    varcte -> CTE_INT tipoINT
Rule 90    varcte -> CTE_FLOAT tipoFLOAT
Rule 91    varcte -> CTE_STRING tipoSTRING
Rule 92    varcte -> cte_bool
Rule 93    tipoINT -> <empty>
Rule 94    tipoFLOAT -> <empty>
Rule 95    tipoSTRING -> <empty>
Rule 96    varcte1 -> epsilon
Rule 97    varcte1 -> LPAREN exp varcte2 RPAREN
Rule 98    varcte1 -> LBRACKET exp RBRACKET
Rule 99    varcte2 -> epsilon
Rule 100   varcte2 -> COMMA exp varcte2
Rule 101   cte_bool -> TRUE
Rule 102   cte_bool -> FALSE
Rule 103   print -> PRINT LPAREN print1 RPAREN
Rule 104   print1 -> CTE_STRING print2
Rule 105   print1 -> ID print2
Rule 106   print2 -> epsilon
Rule 107   print2 -> PLUS print1
Rule 108   condicion -> IF LPAREN expresion_logica RPAREN condicion1 condicion2 condicion3
Rule 109   condicion1 -> bloque
Rule 110   condicion1 -> LCURL bloque RCURL
Rule 111   condicion2 -> ELSEIF condicion1 condicion2
Rule 112   condicion2 -> epsilon
Rule 113   condicion3 -> ELSE condicion1
Rule 114   condicion3 -> epsilon
Rule 115   input -> INPUT LPAREN input1 RPAREN
Rule 116   input1 -> CTE_STRING
Rule 117   input1 -> epsilon
Rule 118   for -> FOR CTE_INT TO CTE_INT BY LPAREN for1 CTE_INT RPAREN bloque
Rule 119   for1 -> PLUS
Rule 120   for1 -> TIMES
Rule 121   for1 -> DIVIDE
Rule 122   for1 -> MINUS
Rule 123   funcion -> FUNCTION funcion4
Rule 124   funcion1 -> epsilon
Rule 125   funcion1 -> var_declaracion funcion1
Rule 126   funcion2 -> epsilon
Rule 127   funcion2 -> estatuto funcion2
Rule 128   funcion3 -> parametros
Rule 129   funcion3 -> epsilon
Rule 130   funcion4 -> VOID funcion5
Rule 131   funcion4 -> tipo funcion5
Rule 132   funcion5 -> ID declareFunc LPAREN funcion3 RPAREN LCURL funcion1 estatuto funcion2 funcion6
Rule 133   declareFunc -> <empty>
Rule 134   funcion6 -> RCURL
Rule 135   funcion6 -> RETURN ID RCURL
Rule 136   switch -> SWITCH ID switch1 LCURL switch2 switch3 RCURL
Rule 137   switch1 -> epsilon
Rule 138   switch1 -> LBRACKET exp RBRACKET
Rule 139   switch2 -> epsilon
Rule 140   switch2 -> CASE varcte COLON switch4 switch2
Rule 141   switch3 -> DEFAULT COLON switch4
Rule 142   switch4 -> LCURL PASS RCURL
Rule 143   switch4 -> estatuto
Rule 144   epsilon -> <empty>

Terminals, with rules where they appear

AMPERSON             : 18
AND                  : 78
BOOL                 : 25
BY                   : 118
CASE                 : 140
COLON                : 140 141
COMMA                : 20 44 87 100
CTE_FLOAT            : 90
CTE_INT              : 89 118 118 118
CTE_STRING           : 91 104 116
DEFAULT              : 141
DIFF                 : 76
DIVIDE               : 38 121
DOUBLE_EQUAL         : 75
ELSE                 : 113
ELSEIF               : 111
END                  : 1
EQUALS               : 22 41 65
FALSE                : 102
FLOAT                : 24
FOR                  : 118
FUNCTION             : 123
GREATER              : 74
ID                   : 8 9 16 17 65 81 88 105 132 135 136
IF                   : 108
INPUT                : 115
INT                  : 23
LBRACKET             : 41 69 98 138
LCURL                : 27 46 110 132 136 142
LESS                 : 73
LPAREN               : 52 53 81 97 103 108 115 118 132
MAIN                 : 46
MINUS                : 33 57 122
OR                   : 80
PASS                 : 142
PLUS                 : 32 56 107 119
PRINT                : 103
RBRACKET             : 41 69 98 138
RCURL                : 27 46 110 134 135 136 142
RETURN               : 135
RPAREN               : 52 53 81 97 103 108 115 118 132
START                : 1
STRING               : 26
SWITCH               : 136
TIMES                : 37 120
TO                   : 118
TRUE                 : 101
VECTOR               : 7 17
VOID                 : 130
WHILE                : 52
error                : 

Nonterminals, with rules where they appear

addOperator          : 32 33 37 38
asignacion           : 59
asignacion1          : 65
asignacion_vector    : 68
bloque               : 52 109 110 118
bloque1              : 27 28
checkEXPPOper        : 30
checkTERMPOper       : 35
condicion            : 61
condicion1           : 108 111 113
condicion2           : 108 111
condicion3           : 108
cte_bool             : 92
declareFunc          : 132
declareMain          : 46
declareVar           : 8
declareVar2          : 9
epsilon              : 3 5 10 12 19 21 29 34 39 43 45 49 51 71 79 84 86 96 99 106 112 114 117 124 126 129 137 139
estatuto             : 27 28 46 50 127 132 143
exp                  : 22 32 33 53 66 72 77 78 80 85 87 97 98 100 138
exp1                 : 30
expresion            : 52 77
expresion1           : 70
expresion2           : 72
expresion_logica     : 108
expresion_logica1    : 77
factor               : 35
factor1              : 54
factorAddFakeCover   : 53
for                  : 64
for1                 : 118
funcion              : 4
funcion1             : 125 132
funcion2             : 127 132
funcion3             : 132
funcion4             : 123
funcion5             : 130 131
funcion6             : 132
inicializacion       : 11
inicializacion_vector : 13
inicializacion_vector1 : 41 69
inicializacion_vector2 : 42 44
input                : 83
input1               : 115
llamada              : 60 67
llamada1             : 81
llamada2             : 85 87
main                 : 1
main1                : 46 48
main2                : 46 50
parametros           : 20 128
parametros1          : 16 17
parametros2          : 16 17
print                : 82
print1               : 103 107
print2               : 104 105
programa             : 0
programa1            : 1 2
programa2            : 1 4
switch               : 62
switch1              : 136
switch2              : 136 140
switch3              : 136
switch4              : 140 141
termino              : 30 37 38
termino1             : 35
tipo                 : 6 7 16 17 131
tipoFLOAT            : 90
tipoINT              : 89
tipoSTRING           : 91
var_declaracion      : 2 48 125
var_declaracion1     : 6
var_declaracion2     : 7
var_declaracion3     : 
var_declaracion4     : 
varcte               : 42 44 56 57 58 140
varcte1              : 88
varcte2              : 97 100
while                : 63

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . START programa1 programa2 main END

    START           shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> START . programa1 programa2 main END
    (2) programa1 -> . var_declaracion programa1
    (3) programa1 -> . epsilon
    (6) var_declaracion -> . tipo var_declaracion1
    (7) var_declaracion -> . VECTOR tipo var_declaracion2
    (144) epsilon -> .
    (23) tipo -> . INT
    (24) tipo -> . FLOAT
    (25) tipo -> . BOOL
    (26) tipo -> . STRING

    VECTOR          shift and go to state 8
    FUNCTION        reduce using rule 144 (epsilon -> .)
    MAIN            reduce using rule 144 (epsilon -> .)
    INT             shift and go to state 11
    FLOAT           shift and go to state 3
    BOOL            shift and go to state 9
    STRING          shift and go to state 4

    tipo                           shift and go to state 5
    var_declaracion                shift and go to state 6
    programa1                      shift and go to state 7
    epsilon                        shift and go to state 10

state 2

    (0) S' -> programa .



state 3

    (24) tipo -> FLOAT .

    AMPERSON        reduce using rule 24 (tipo -> FLOAT .)
    ID              reduce using rule 24 (tipo -> FLOAT .)


state 4

    (26) tipo -> STRING .

    AMPERSON        reduce using rule 26 (tipo -> STRING .)
    ID              reduce using rule 26 (tipo -> STRING .)


state 5

    (6) var_declaracion -> tipo . var_declaracion1
    (8) var_declaracion1 -> . ID declareVar

    ID              shift and go to state 13

    var_declaracion1               shift and go to state 12

state 6

    (2) programa1 -> var_declaracion . programa1
    (2) programa1 -> . var_declaracion programa1
    (3) programa1 -> . epsilon
    (6) var_declaracion -> . tipo var_declaracion1
    (7) var_declaracion -> . VECTOR tipo var_declaracion2
    (144) epsilon -> .
    (23) tipo -> . INT
    (24) tipo -> . FLOAT
    (25) tipo -> . BOOL
    (26) tipo -> . STRING

    VECTOR          shift and go to state 8
    FUNCTION        reduce using rule 144 (epsilon -> .)
    MAIN            reduce using rule 144 (epsilon -> .)
    INT             shift and go to state 11
    FLOAT           shift and go to state 3
    BOOL            shift and go to state 9
    STRING          shift and go to state 4

    tipo                           shift and go to state 5
    epsilon                        shift and go to state 10
    var_declaracion                shift and go to state 6
    programa1                      shift and go to state 14

state 7

    (1) programa -> START programa1 . programa2 main END
    (4) programa2 -> . funcion programa2
    (5) programa2 -> . epsilon
    (123) funcion -> . FUNCTION funcion4
    (144) epsilon -> .

    FUNCTION        shift and go to state 15
    MAIN            reduce using rule 144 (epsilon -> .)

    epsilon                        shift and go to state 16
    programa2                      shift and go to state 17
    funcion                        shift and go to state 18

state 8

    (7) var_declaracion -> VECTOR . tipo var_declaracion2
    (23) tipo -> . INT
    (24) tipo -> . FLOAT
    (25) tipo -> . BOOL
    (26) tipo -> . STRING

    INT             shift and go to state 11
    FLOAT           shift and go to state 3
    BOOL            shift and go to state 9
    STRING          shift and go to state 4

    tipo                           shift and go to state 19

state 9

    (25) tipo -> BOOL .

    AMPERSON        reduce using rule 25 (tipo -> BOOL .)
    ID              reduce using rule 25 (tipo -> BOOL .)


state 10

    (3) programa1 -> epsilon .

    FUNCTION        reduce using rule 3 (programa1 -> epsilon .)
    MAIN            reduce using rule 3 (programa1 -> epsilon .)


state 11

    (23) tipo -> INT .

    AMPERSON        reduce using rule 23 (tipo -> INT .)
    ID              reduce using rule 23 (tipo -> INT .)


state 12

    (6) var_declaracion -> tipo var_declaracion1 .

    VECTOR          reduce using rule 6 (var_declaracion -> tipo var_declaracion1 .)
    INT             reduce using rule 6 (var_declaracion -> tipo var_declaracion1 .)
    FLOAT           reduce using rule 6 (var_declaracion -> tipo var_declaracion1 .)
    BOOL            reduce using rule 6 (var_declaracion -> tipo var_declaracion1 .)
    STRING          reduce using rule 6 (var_declaracion -> tipo var_declaracion1 .)
    ID              reduce using rule 6 (var_declaracion -> tipo var_declaracion1 .)
    IF              reduce using rule 6 (var_declaracion -> tipo var_declaracion1 .)
    SWITCH          reduce using rule 6 (var_declaracion -> tipo var_declaracion1 .)
    WHILE           reduce using rule 6 (var_declaracion -> tipo var_declaracion1 .)
    FOR             reduce using rule 6 (var_declaracion -> tipo var_declaracion1 .)
    PRINT           reduce using rule 6 (var_declaracion -> tipo var_declaracion1 .)
    INPUT           reduce using rule 6 (var_declaracion -> tipo var_declaracion1 .)
    FUNCTION        reduce using rule 6 (var_declaracion -> tipo var_declaracion1 .)
    MAIN            reduce using rule 6 (var_declaracion -> tipo var_declaracion1 .)


state 13

    (8) var_declaracion1 -> ID . declareVar
    (14) declareVar -> .

    VECTOR          reduce using rule 14 (declareVar -> .)
    INT             reduce using rule 14 (declareVar -> .)
    FLOAT           reduce using rule 14 (declareVar -> .)
    BOOL            reduce using rule 14 (declareVar -> .)
    STRING          reduce using rule 14 (declareVar -> .)
    FUNCTION        reduce using rule 14 (declareVar -> .)
    MAIN            reduce using rule 14 (declareVar -> .)
    ID              reduce using rule 14 (declareVar -> .)
    IF              reduce using rule 14 (declareVar -> .)
    SWITCH          reduce using rule 14 (declareVar -> .)
    WHILE           reduce using rule 14 (declareVar -> .)
    FOR             reduce using rule 14 (declareVar -> .)
    PRINT           reduce using rule 14 (declareVar -> .)
    INPUT           reduce using rule 14 (declareVar -> .)

    declareVar                     shift and go to state 20

state 14

    (2) programa1 -> var_declaracion programa1 .

    FUNCTION        reduce using rule 2 (programa1 -> var_declaracion programa1 .)
    MAIN            reduce using rule 2 (programa1 -> var_declaracion programa1 .)


state 15

    (123) funcion -> FUNCTION . funcion4
    (130) funcion4 -> . VOID funcion5
    (131) funcion4 -> . tipo funcion5
    (23) tipo -> . INT
    (24) tipo -> . FLOAT
    (25) tipo -> . BOOL
    (26) tipo -> . STRING

    VOID            shift and go to state 22
    INT             shift and go to state 11
    FLOAT           shift and go to state 3
    BOOL            shift and go to state 9
    STRING          shift and go to state 4

    funcion4                       shift and go to state 23
    tipo                           shift and go to state 21

state 16

    (5) programa2 -> epsilon .

    MAIN            reduce using rule 5 (programa2 -> epsilon .)


state 17

    (1) programa -> START programa1 programa2 . main END
    (46) main -> . MAIN declareMain LCURL main1 estatuto main2 RCURL

    MAIN            shift and go to state 25

    main                           shift and go to state 24

state 18

    (4) programa2 -> funcion . programa2
    (4) programa2 -> . funcion programa2
    (5) programa2 -> . epsilon
    (123) funcion -> . FUNCTION funcion4
    (144) epsilon -> .

    FUNCTION        shift and go to state 15
    MAIN            reduce using rule 144 (epsilon -> .)

    epsilon                        shift and go to state 16
    programa2                      shift and go to state 26
    funcion                        shift and go to state 18

state 19

    (7) var_declaracion -> VECTOR tipo . var_declaracion2
    (9) var_declaracion2 -> . ID declareVar2

    ID              shift and go to state 28

    var_declaracion2               shift and go to state 27

state 20

    (8) var_declaracion1 -> ID declareVar .

    VECTOR          reduce using rule 8 (var_declaracion1 -> ID declareVar .)
    INT             reduce using rule 8 (var_declaracion1 -> ID declareVar .)
    FLOAT           reduce using rule 8 (var_declaracion1 -> ID declareVar .)
    BOOL            reduce using rule 8 (var_declaracion1 -> ID declareVar .)
    STRING          reduce using rule 8 (var_declaracion1 -> ID declareVar .)
    FUNCTION        reduce using rule 8 (var_declaracion1 -> ID declareVar .)
    MAIN            reduce using rule 8 (var_declaracion1 -> ID declareVar .)
    ID              reduce using rule 8 (var_declaracion1 -> ID declareVar .)
    IF              reduce using rule 8 (var_declaracion1 -> ID declareVar .)
    SWITCH          reduce using rule 8 (var_declaracion1 -> ID declareVar .)
    WHILE           reduce using rule 8 (var_declaracion1 -> ID declareVar .)
    FOR             reduce using rule 8 (var_declaracion1 -> ID declareVar .)
    PRINT           reduce using rule 8 (var_declaracion1 -> ID declareVar .)
    INPUT           reduce using rule 8 (var_declaracion1 -> ID declareVar .)


state 21

    (131) funcion4 -> tipo . funcion5
    (132) funcion5 -> . ID declareFunc LPAREN funcion3 RPAREN LCURL funcion1 estatuto funcion2 funcion6

    ID              shift and go to state 29

    funcion5                       shift and go to state 30

state 22

    (130) funcion4 -> VOID . funcion5
    (132) funcion5 -> . ID declareFunc LPAREN funcion3 RPAREN LCURL funcion1 estatuto funcion2 funcion6

    ID              shift and go to state 29

    funcion5                       shift and go to state 31

state 23

    (123) funcion -> FUNCTION funcion4 .

    FUNCTION        reduce using rule 123 (funcion -> FUNCTION funcion4 .)
    MAIN            reduce using rule 123 (funcion -> FUNCTION funcion4 .)


state 24

    (1) programa -> START programa1 programa2 main . END

    END             shift and go to state 32


state 25

    (46) main -> MAIN . declareMain LCURL main1 estatuto main2 RCURL
    (47) declareMain -> .

    LCURL           reduce using rule 47 (declareMain -> .)

    declareMain                    shift and go to state 33

state 26

    (4) programa2 -> funcion programa2 .

    MAIN            reduce using rule 4 (programa2 -> funcion programa2 .)


state 27

    (7) var_declaracion -> VECTOR tipo var_declaracion2 .

    VECTOR          reduce using rule 7 (var_declaracion -> VECTOR tipo var_declaracion2 .)
    INT             reduce using rule 7 (var_declaracion -> VECTOR tipo var_declaracion2 .)
    FLOAT           reduce using rule 7 (var_declaracion -> VECTOR tipo var_declaracion2 .)
    BOOL            reduce using rule 7 (var_declaracion -> VECTOR tipo var_declaracion2 .)
    STRING          reduce using rule 7 (var_declaracion -> VECTOR tipo var_declaracion2 .)
    ID              reduce using rule 7 (var_declaracion -> VECTOR tipo var_declaracion2 .)
    IF              reduce using rule 7 (var_declaracion -> VECTOR tipo var_declaracion2 .)
    SWITCH          reduce using rule 7 (var_declaracion -> VECTOR tipo var_declaracion2 .)
    WHILE           reduce using rule 7 (var_declaracion -> VECTOR tipo var_declaracion2 .)
    FOR             reduce using rule 7 (var_declaracion -> VECTOR tipo var_declaracion2 .)
    PRINT           reduce using rule 7 (var_declaracion -> VECTOR tipo var_declaracion2 .)
    INPUT           reduce using rule 7 (var_declaracion -> VECTOR tipo var_declaracion2 .)
    FUNCTION        reduce using rule 7 (var_declaracion -> VECTOR tipo var_declaracion2 .)
    MAIN            reduce using rule 7 (var_declaracion -> VECTOR tipo var_declaracion2 .)


state 28

    (9) var_declaracion2 -> ID . declareVar2
    (15) declareVar2 -> .

    VECTOR          reduce using rule 15 (declareVar2 -> .)
    INT             reduce using rule 15 (declareVar2 -> .)
    FLOAT           reduce using rule 15 (declareVar2 -> .)
    BOOL            reduce using rule 15 (declareVar2 -> .)
    STRING          reduce using rule 15 (declareVar2 -> .)
    FUNCTION        reduce using rule 15 (declareVar2 -> .)
    MAIN            reduce using rule 15 (declareVar2 -> .)
    ID              reduce using rule 15 (declareVar2 -> .)
    IF              reduce using rule 15 (declareVar2 -> .)
    SWITCH          reduce using rule 15 (declareVar2 -> .)
    WHILE           reduce using rule 15 (declareVar2 -> .)
    FOR             reduce using rule 15 (declareVar2 -> .)
    PRINT           reduce using rule 15 (declareVar2 -> .)
    INPUT           reduce using rule 15 (declareVar2 -> .)

    declareVar2                    shift and go to state 34

state 29

    (132) funcion5 -> ID . declareFunc LPAREN funcion3 RPAREN LCURL funcion1 estatuto funcion2 funcion6
    (133) declareFunc -> .

    LPAREN          reduce using rule 133 (declareFunc -> .)

    declareFunc                    shift and go to state 35

state 30

    (131) funcion4 -> tipo funcion5 .

    FUNCTION        reduce using rule 131 (funcion4 -> tipo funcion5 .)
    MAIN            reduce using rule 131 (funcion4 -> tipo funcion5 .)


state 31

    (130) funcion4 -> VOID funcion5 .

    FUNCTION        reduce using rule 130 (funcion4 -> VOID funcion5 .)
    MAIN            reduce using rule 130 (funcion4 -> VOID funcion5 .)


state 32

    (1) programa -> START programa1 programa2 main END .

    $end            reduce using rule 1 (programa -> START programa1 programa2 main END .)


state 33

    (46) main -> MAIN declareMain . LCURL main1 estatuto main2 RCURL

    LCURL           shift and go to state 36


state 34

    (9) var_declaracion2 -> ID declareVar2 .

    VECTOR          reduce using rule 9 (var_declaracion2 -> ID declareVar2 .)
    INT             reduce using rule 9 (var_declaracion2 -> ID declareVar2 .)
    FLOAT           reduce using rule 9 (var_declaracion2 -> ID declareVar2 .)
    BOOL            reduce using rule 9 (var_declaracion2 -> ID declareVar2 .)
    STRING          reduce using rule 9 (var_declaracion2 -> ID declareVar2 .)
    FUNCTION        reduce using rule 9 (var_declaracion2 -> ID declareVar2 .)
    MAIN            reduce using rule 9 (var_declaracion2 -> ID declareVar2 .)
    ID              reduce using rule 9 (var_declaracion2 -> ID declareVar2 .)
    IF              reduce using rule 9 (var_declaracion2 -> ID declareVar2 .)
    SWITCH          reduce using rule 9 (var_declaracion2 -> ID declareVar2 .)
    WHILE           reduce using rule 9 (var_declaracion2 -> ID declareVar2 .)
    FOR             reduce using rule 9 (var_declaracion2 -> ID declareVar2 .)
    PRINT           reduce using rule 9 (var_declaracion2 -> ID declareVar2 .)
    INPUT           reduce using rule 9 (var_declaracion2 -> ID declareVar2 .)


state 35

    (132) funcion5 -> ID declareFunc . LPAREN funcion3 RPAREN LCURL funcion1 estatuto funcion2 funcion6

    LPAREN          shift and go to state 37


state 36

    (46) main -> MAIN declareMain LCURL . main1 estatuto main2 RCURL
    (48) main1 -> . var_declaracion main1
    (49) main1 -> . epsilon
    (6) var_declaracion -> . tipo var_declaracion1
    (7) var_declaracion -> . VECTOR tipo var_declaracion2
    (144) epsilon -> .
    (23) tipo -> . INT
    (24) tipo -> . FLOAT
    (25) tipo -> . BOOL
    (26) tipo -> . STRING

    VECTOR          shift and go to state 8
    ID              reduce using rule 144 (epsilon -> .)
    IF              reduce using rule 144 (epsilon -> .)
    SWITCH          reduce using rule 144 (epsilon -> .)
    WHILE           reduce using rule 144 (epsilon -> .)
    FOR             reduce using rule 144 (epsilon -> .)
    PRINT           reduce using rule 144 (epsilon -> .)
    INPUT           reduce using rule 144 (epsilon -> .)
    INT             shift and go to state 11
    FLOAT           shift and go to state 3
    BOOL            shift and go to state 9
    STRING          shift and go to state 4

    tipo                           shift and go to state 5
    main1                          shift and go to state 38
    var_declaracion                shift and go to state 39
    epsilon                        shift and go to state 40

state 37

    (132) funcion5 -> ID declareFunc LPAREN . funcion3 RPAREN LCURL funcion1 estatuto funcion2 funcion6
    (128) funcion3 -> . parametros
    (129) funcion3 -> . epsilon
    (16) parametros -> . tipo parametros1 ID parametros2
    (17) parametros -> . VECTOR tipo parametros1 ID parametros2
    (144) epsilon -> .
    (23) tipo -> . INT
    (24) tipo -> . FLOAT
    (25) tipo -> . BOOL
    (26) tipo -> . STRING

    VECTOR          shift and go to state 45
    RPAREN          reduce using rule 144 (epsilon -> .)
    INT             shift and go to state 11
    FLOAT           shift and go to state 3
    BOOL            shift and go to state 9
    STRING          shift and go to state 4

    tipo                           shift and go to state 41
    epsilon                        shift and go to state 42
    funcion3                       shift and go to state 43
    parametros                     shift and go to state 44

state 38

    (46) main -> MAIN declareMain LCURL main1 . estatuto main2 RCURL
    (59) estatuto -> . asignacion
    (60) estatuto -> . llamada
    (61) estatuto -> . condicion
    (62) estatuto -> . switch
    (63) estatuto -> . while
    (64) estatuto -> . for
    (65) asignacion -> . ID EQUALS asignacion1
    (81) llamada -> . ID LPAREN llamada1 RPAREN
    (82) llamada -> . print
    (83) llamada -> . input
    (108) condicion -> . IF LPAREN expresion_logica RPAREN condicion1 condicion2 condicion3
    (136) switch -> . SWITCH ID switch1 LCURL switch2 switch3 RCURL
    (52) while -> . WHILE LPAREN expresion RPAREN bloque
    (118) for -> . FOR CTE_INT TO CTE_INT BY LPAREN for1 CTE_INT RPAREN bloque
    (103) print -> . PRINT LPAREN print1 RPAREN
    (115) input -> . INPUT LPAREN input1 RPAREN

    ID              shift and go to state 57
    IF              shift and go to state 58
    SWITCH          shift and go to state 51
    WHILE           shift and go to state 46
    FOR             shift and go to state 55
    PRINT           shift and go to state 47
    INPUT           shift and go to state 56

    for                            shift and go to state 48
    estatuto                       shift and go to state 49
    switch                         shift and go to state 60
    llamada                        shift and go to state 50
    condicion                      shift and go to state 52
    print                          shift and go to state 53
    input                          shift and go to state 54
    asignacion                     shift and go to state 59
    while                          shift and go to state 61

state 39

    (48) main1 -> var_declaracion . main1
    (48) main1 -> . var_declaracion main1
    (49) main1 -> . epsilon
    (6) var_declaracion -> . tipo var_declaracion1
    (7) var_declaracion -> . VECTOR tipo var_declaracion2
    (144) epsilon -> .
    (23) tipo -> . INT
    (24) tipo -> . FLOAT
    (25) tipo -> . BOOL
    (26) tipo -> . STRING

    VECTOR          shift and go to state 8
    ID              reduce using rule 144 (epsilon -> .)
    IF              reduce using rule 144 (epsilon -> .)
    SWITCH          reduce using rule 144 (epsilon -> .)
    WHILE           reduce using rule 144 (epsilon -> .)
    FOR             reduce using rule 144 (epsilon -> .)
    PRINT           reduce using rule 144 (epsilon -> .)
    INPUT           reduce using rule 144 (epsilon -> .)
    INT             shift and go to state 11
    FLOAT           shift and go to state 3
    BOOL            shift and go to state 9
    STRING          shift and go to state 4

    tipo                           shift and go to state 5
    main1                          shift and go to state 62
    var_declaracion                shift and go to state 39
    epsilon                        shift and go to state 40

state 40

    (49) main1 -> epsilon .

    ID              reduce using rule 49 (main1 -> epsilon .)
    IF              reduce using rule 49 (main1 -> epsilon .)
    SWITCH          reduce using rule 49 (main1 -> epsilon .)
    WHILE           reduce using rule 49 (main1 -> epsilon .)
    FOR             reduce using rule 49 (main1 -> epsilon .)
    PRINT           reduce using rule 49 (main1 -> epsilon .)
    INPUT           reduce using rule 49 (main1 -> epsilon .)


state 41

    (16) parametros -> tipo . parametros1 ID parametros2
    (18) parametros1 -> . AMPERSON
    (19) parametros1 -> . epsilon
    (144) epsilon -> .

    AMPERSON        shift and go to state 65
    ID              reduce using rule 144 (epsilon -> .)

    parametros1                    shift and go to state 64
    epsilon                        shift and go to state 63

state 42

    (129) funcion3 -> epsilon .

    RPAREN          reduce using rule 129 (funcion3 -> epsilon .)


state 43

    (132) funcion5 -> ID declareFunc LPAREN funcion3 . RPAREN LCURL funcion1 estatuto funcion2 funcion6

    RPAREN          shift and go to state 66


state 44

    (128) funcion3 -> parametros .

    RPAREN          reduce using rule 128 (funcion3 -> parametros .)


state 45

    (17) parametros -> VECTOR . tipo parametros1 ID parametros2
    (23) tipo -> . INT
    (24) tipo -> . FLOAT
    (25) tipo -> . BOOL
    (26) tipo -> . STRING

    INT             shift and go to state 11
    FLOAT           shift and go to state 3
    BOOL            shift and go to state 9
    STRING          shift and go to state 4

    tipo                           shift and go to state 67

state 46

    (52) while -> WHILE . LPAREN expresion RPAREN bloque

    LPAREN          shift and go to state 68


state 47

    (103) print -> PRINT . LPAREN print1 RPAREN

    LPAREN          shift and go to state 69


state 48

    (64) estatuto -> for .

    ID              reduce using rule 64 (estatuto -> for .)
    IF              reduce using rule 64 (estatuto -> for .)
    SWITCH          reduce using rule 64 (estatuto -> for .)
    WHILE           reduce using rule 64 (estatuto -> for .)
    FOR             reduce using rule 64 (estatuto -> for .)
    PRINT           reduce using rule 64 (estatuto -> for .)
    INPUT           reduce using rule 64 (estatuto -> for .)
    RCURL           reduce using rule 64 (estatuto -> for .)
    RETURN          reduce using rule 64 (estatuto -> for .)
    CASE            reduce using rule 64 (estatuto -> for .)
    DEFAULT         reduce using rule 64 (estatuto -> for .)


state 49

    (46) main -> MAIN declareMain LCURL main1 estatuto . main2 RCURL
    (50) main2 -> . estatuto main2
    (51) main2 -> . epsilon
    (59) estatuto -> . asignacion
    (60) estatuto -> . llamada
    (61) estatuto -> . condicion
    (62) estatuto -> . switch
    (63) estatuto -> . while
    (64) estatuto -> . for
    (144) epsilon -> .
    (65) asignacion -> . ID EQUALS asignacion1
    (81) llamada -> . ID LPAREN llamada1 RPAREN
    (82) llamada -> . print
    (83) llamada -> . input
    (108) condicion -> . IF LPAREN expresion_logica RPAREN condicion1 condicion2 condicion3
    (136) switch -> . SWITCH ID switch1 LCURL switch2 switch3 RCURL
    (52) while -> . WHILE LPAREN expresion RPAREN bloque
    (118) for -> . FOR CTE_INT TO CTE_INT BY LPAREN for1 CTE_INT RPAREN bloque
    (103) print -> . PRINT LPAREN print1 RPAREN
    (115) input -> . INPUT LPAREN input1 RPAREN

    RCURL           reduce using rule 144 (epsilon -> .)
    ID              shift and go to state 57
    IF              shift and go to state 58
    SWITCH          shift and go to state 51
    WHILE           shift and go to state 46
    FOR             shift and go to state 55
    PRINT           shift and go to state 47
    INPUT           shift and go to state 56
